Change script and title 2

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>Qualtrics</h1>
-    <h1>Prueba2</h1>
+    <h2>Prueba publicacion</h2>
     <div id='ZN_5hGGKDRdqgaGLKm'><!--DO NOT REMOVE-CONTENTS PLACED HERE--></div>
 </body>
 </html>
